[workspace.package]
name        = "tafkars"
version     = "0.1.0"
edition     = "2021"
description = "The API Formerly Known As"
license     = "AGPL-3.0"
authors     = ["derivator <derivator@users.noreply.github.com>"]
repository  = "https://github.com/derivator/tafkars"

[workspace]
members = [
    "tafkars",
    "tafkars-lemmy"
]
