[package]
name        = "tafkars"
edition     = { workspace = true }
authors     = { workspace = true }
description = { workspace = true }
version     = { workspace = true }
license     = "MIT"
repository  = { workspace = true }

[dependencies]
serde_json = "1.0.96"
serde      = { version = "1.0.163", features = ["derive"] }
